[package]
name = "yft"
version = "0.1.0"
authors = ["Ich <Johannes.Neumann@udo.edu>"]

[dependencies]
stats_alloc =  { path = "../stats_alloc"}#"0.1.8"
rand = "0.7.0"
rand_distr = "0.2.1"
structopt = "0.2.18"
bitflags = "1.1.0"
uint = { path = "../uint"}
rustc-hash = "1.0.1"
serde = "1.0.101"
rmp-serde = "0.14.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "yft_bench"
harness = false